--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,14 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/navigate_frame_activity_buttom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="full size"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
