--- a/app/src/main/res/layout/item_frame.xml
+++ b/app/src/main/res/layout/item_frame.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FrameActivity">
+    android:layout_height="match_parent">
 
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager2"
+    <ImageView
+        android:id="@+id/fragment_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
