--- a/app/src/main/res/layout/activity_frame.xml
+++ b/app/src/main/res/layout/activity_frame.xml
@@ -14,4 +14,17 @@
         android:layout_height="match_parent"
         />
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingHorizontal="10dp"
+        android:layout_marginBottom="50dp"
+        app:tabIndicator="@null"
+        app:tabBackground="@drawable/selector_tab"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
