--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:background="#E3EB90"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"/>
     <Button
         android:id="@+id/btn_load_Image"
         android:layout_width="wrap_content"
@@ -26,13 +32,15 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_load_Image"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tool_bar"
+        />
 
     <Button
         android:id="@+id/navigate_frame_activity_buttom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="full size"
+        android:layout_marginBottom="59dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
