--- a/app/src/main/res/layout/activity_frame.xml
+++ b/app/src/main/res/layout/activity_frame.xml
@@ -8,10 +8,20 @@
     tools:context=".FrameActivity">
 
 
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:background="#CEFA9C"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tool_bar"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <com.google.android.material.tabs.TabLayout
