--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,22 +8,24 @@
     tools:context=".MainActivity">
 
     <androidx.appcompat.widget.Toolbar
+        android:layout_marginTop="25dp"
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
         android:background="#E3EB90"
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent"/>
+
+
     <Button
         android:id="@+id/btn_load_Image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/load_image"
-        app:layout_constraintVertical_bias="0.9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.931" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/image_recycler_view"
